load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_common_image",
    srcs = [
        "image_utils.cpp",
    ],
    hdrs = glob([
        "include/**/*.h",
    ]),
    strip_include_prefix = "include",
    deps = [
        "//third_party/stb:gfxstream_stb",
    ],
)
