load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_common_utils",
    srcs = ["strings.cpp"],
    hdrs = glob(["include/**/*.h"]),
    copts = ["-fno-exceptions"],
    includes = ["include"],
)
