# Copyright 2024 Android Open Source Project
# SPDX-License-Identifier: Apache-2.0

inc_common_utils = include_directories('include')

files_lib_common_utils = files(
  'strings.cpp',
)

lib_common_utils = static_library(
  'common_utils',
  files_lib_common_utils,
  include_directories: [inc_common_utils],
)