load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_guest_openglsystemcommon",
    srcs = [
        "FormatConversions.cpp",
        "HostConnection.cpp",
        "ProcessPipe.cpp",
        "ThreadInfo.cpp",
        "VirtioGpuPipeStream.cpp",
    ],
    hdrs = [
        "FormatConversions.h",
        "HostConnection.h",
        "ProcessPipe.h",
        "QemuPipeStream.h",
        "ThreadInfo.h",
        "VirtioGpuPipeStream.h",
    ],
    defines = [
        "ANDROID",
        "GFXSTREAM_NO_QEMU_PIPE",
    ],
    includes = [
        ".",
    ],
    linkopts = [
        # Search the current directory for this library's shared libs.
        # Used for the end2end tests which package all of the guest
        # libraries into a single `testdata` directory for testing.
        "-Wl,-rpath,'$$ORIGIN'",
    ],
    deps = [
        # Order is important! Both encoders seem to export the same
        # functions...
        "//guest/GLESv2_enc:gfxstream_guest_glesv2encoder",
        "//guest/GLESv1_enc:gfxstream_guest_glesv1encoder",
        # End-Section
        "//common/logging:gfxstream_common_logging",
        "//guest/OpenglCodecCommon:gfxstream_guest_openglcodeccommon",
        "//guest/android-emu:gfxstream_guest_ringbuffer",
        "//guest/qemupipe:gfxstream_guest_qemupipe",
        "//guest/renderControl_enc:gfxstream_guest_rendercontrolencoder",
        "//third_party/android:gfxstream_thirdparty_android_headers",
        "@mesa//:mesa_gfxstream_goldfish_address_space",
        "@mesa//:mesa_gfxstream_guest_android",
        "@mesa//:mesa_gfxstream_guest_iostream",
        "@mesa//:mesa_gfxstream_guest_platform",
    ],
)

cc_shared_library(
    name = "gfxstream_guest_openglsystemcommon_shared",
    dynamic_deps = [
        # Order is important! Both encoders seem to export the same
        # functions...
        "//guest/GLESv2_enc:gfxstream_guest_glesv2encoder_shared",
        "//guest/GLESv1_enc:gfxstream_guest_glesv1encoder_shared",
        # End-Section
        "//guest/OpenglCodecCommon:gfxstream_guest_openglcodeccommon_shared",
    ],
    shared_lib_name = "libOpenglSystemCommon.so",
    deps = [
        ":gfxstream_guest_openglsystemcommon",
    ],
)
