load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_guest_rendercontrolencoder",
    srcs = [
        "ExtendedRenderControl.cpp",
        "GfxStreamRenderControl.cpp",
        "GfxStreamRenderControlConnection.cpp",
        "renderControl_client_context.cpp",
        "renderControl_enc.cpp",
        "renderControl_entry.cpp",
    ],
    hdrs = glob([
        "**/*.h",
    ], exclude = [
        "renderControl_ftable.h",
    ]),
    includes = [
        ".",
    ],
    deps = [
        "//common/logging:gfxstream_common_logging",
        "//guest/OpenglCodecCommon:gfxstream_guest_openglcodeccommon",
        "//guest/android-emu:gfxstream_guest_base",
        "//third_party/opengl:gfxstream_egl_headers",
        "@mesa//:mesa_gfxstream_connection_manager",
        "@mesa//:mesa_gfxstream_guest_iostream",
    ],
)
