load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:build_variables.bzl", "GFXSTREAM_HOST_COPTS", "GFXSTREAM_HOST_DEFINES")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_host_address_space",
    srcs = [
        "address_space_device.cpp",
        "address_space_host_memory_allocator.cpp",
        "address_space_graphics.cpp",
        "address_space_shared_slots_host_memory_allocator.cpp",
        "ring_buffer.cpp",
        "sub_allocator.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    strip_include_prefix = "include",
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//host:gfxstream_backend_headers",
    ],
)

cc_test(
    name = "gfxstream_host_address_space_tests",
    srcs = [
        "address_space_host_memory_allocator_unittest.cpp",
        "address_space_shared_slots_host_memory_allocator_unittest.cpp",
        "ring_buffer_unittest.cpp",
    ],
    deps = [
        ":gfxstream_host_address_space",
        "//common/base:gfxstream_common_base",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
