# Copyright 2025 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (NOT TARGET gfxstream_features)
    add_library(
        gfxstream_features.headers
        INTERFACE)
    target_include_directories(
        gfxstream_features.headers
        INTERFACE
        include)

    add_library(
        gfxstream_features
        features.cpp)
    target_link_libraries(
        gfxstream_features
        PUBLIC
        gfxstream_features.headers)
endif()